--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,356 @@
-vllm==0.8.5
+absl-py==2.3.0
+aiaio==0.0.6
+aiofiles==23.2.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiohttp-cors==0.7.0
+aiosignal==1.3.2
+airportsdata==20250224
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+astor==0.8.1
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==25.3.0
+audioread==3.0.1
+av==14.3.0
+babel==2.16.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.12.3
+bert-score==0.3.13
+blake3==1.0.4
+bleach==6.1.0
+blinker==1.9.0
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.8
+cloudpickle==3.1.1
+cmake==3.30.2
+coloredlogs==15.0.1
+colorful==0.5.6
+comm==0.2.2
+compressed-tensors==0.9.3
+contourpy==1.3.0
+cupy-cuda12x==13.4.1
+cycler==0.12.1
+dataclasses-json==0.6.7
+datasets==2.14.4
+debugpy==1.8.5
+decorator==5.1.1
+defusedxml==0.7.1
+deprecated==1.2.18
+depyf==0.18.0
+dill==0.4.0
+diskcache==5.6.3
+distlib==0.3.9
+distro==1.9.0
+dnspython==2.7.0
+duckdb==1.0.0
+durationpy==0.9
+einops==0.8.1
+email-validator==2.2.0
+et-xmlfile==2.0.0
+executing==2.1.0
+fastapi==0.115.12
+fastapi-cli==0.0.7
+fastjsonschema==2.20.0
+fastrlock==0.8.3
+ffmpeg==1.4
+ffmpeg-python==0.2.0
+ffmpy==0.5.0
+filelock==3.18.0
+flatbuffers==25.2.10
+fonttools==4.54.1
+fqdn==1.5.1
+frozenlist==1.6.0
+fsspec==2025.3.2
+future==1.0.0
+gguf==0.16.2
+gitdb==4.0.12
+gitpython==3.1.44
+google-api-core==2.24.1
+google-auth==2.38.0
+googleapis-common-protos==1.70.0
+gpytorch==1.14
+gradio==5.20.1
+gradio-client==1.7.2
+greenlet==3.1.1
+groovy==0.1.2
+grpcio==1.71.0
+h11==0.16.0
+hf-xet==1.0.5
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.30.2
+humanfriendly==10.0
+idna==3.10
+importlib-metadata==8.0.0
+importlib-resources==6.5.2
+iniconfig==2.0.0
+interegular==0.3.3
+ipdb==0.13.13
+ipykernel==6.29.5
+ipython==8.28.0
+isoduration==20.11.0
+jaxtyping==0.2.38
+jedi==0.19.1
+jenkspy==0.4.1
+jinja2==3.1.6
+jiter==0.9.0
+jiwer==3.1.0
+joblib==1.4.2
+json5==0.9.25
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter-client==8.6.2
+jupyter-core==5.7.2
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter-server==2.14.2
+jupyter-server-terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.27.3
+kiwisolver==1.4.7
+kubernetes==32.0.1
 langchain==0.3.18
+langchain-community==0.2.12
+langchain-core==0.3.35
+langchain-openai==0.3.5
+langchain-text-splitters==0.3.6
+langgraph==0.2.72
+langgraph-checkpoint==2.0.15
+langgraph-sdk==0.1.51
+langsmith==0.3.8
+lark==1.2.2
+lazy-loader==0.4
+librosa==0.11.0
+linear-operator==0.6
+llguidance==0.7.19
+llvmlite==0.44.0
+lm-format-enforcer==0.10.11
+loguru==0.7.3
+lxml==5.3.0
+markdown==3.7
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+marshmallow==3.22.0
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistral-common==1.5.4
+mistune==3.0.2
+mmh3==5.1.0
+monotonic==1.6
+more-itertools==10.7.0
+mpmath==1.3.0
+msgpack==1.1.0
+msgspec==0.19.0
+multidict==6.4.3
+multiprocess==0.70.15
+mypy-extensions==1.0.0
+narwhals==1.31.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+ninja==1.11.1.4
+nltk==3.9.1
+notebook==7.2.2
+notebook-shim==0.2.4
+numba==0.61.2
+numpy==2.2.5
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-ml-py==12.570.86
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+oauthlib==3.2.2
+onnxruntime==1.21.0
+openai==1.76.0
+openai-whisper==20240930
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-exporter-otlp-proto-http==1.26.0
+opentelemetry-instrumentation==0.52b0
+opentelemetry-instrumentation-asgi==0.52b0
+opentelemetry-instrumentation-fastapi==0.52b0
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+opentelemetry-semantic-conventions-ai==0.4.3
+opentelemetry-util-http==0.52b0
+opt-einsum==3.4.0
+orjson==3.10.15
+outlines==0.1.11
+outlines-core==0.1.26
+overrides==7.7.0
+packaging==25.0
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+partial-json-parser==0.2.1.1.post5
+pexpect==4.9.0
+pillow==11.2.1
+platformdirs==4.3.6
+pluggy==1.5.0
+pooch==1.8.2
+posthog==3.19.1
+prometheus-client==0.21.1
+prometheus-fastapi-instrumentator==7.1.0
+prompt-toolkit==3.0.48
+propcache==0.3.1
+proto-plus==1.26.0
+protobuf==4.25.7
+psutil==7.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.3
+py-cpuinfo==9.0.0
+py-spy==0.4.0
+py4j==0.10.9.7
+pyairports==2.1.1
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1-modules==0.4.1
+pybind11==2.13.6
+pycountry==24.6.1
+pycparser==2.22
+pydantic==2.11.3
+pydantic-core==2.33.1
+pydeck==0.9.1
+pydub==0.25.1
+pygments==2.19.1
+pyod==2.0.2
+pyparsing==3.2.1
+pypika==0.48.9
+pyproject-hooks==1.2.0
+pyro-api==0.1.2
+pyro-ppl==1.9.1
+pyspark==3.5.3
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-json-logger==3.3.0
+python-multipart==0.0.20
+pythresh==0.3.7
+pytz==2025.1
+pyyaml==6.0.2
+pyzmq==26.4.0
+qwen-vl-utils==0.0.10
+rank-bm25==0.2.2
+rapidfuzz==3.13.0
+ray==2.43.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==14.0.0
+rich-toolkit==0.14.3
+rouge==1.0.1
+rouge-score==0.1.2
+rpds-py==0.24.0
+rsa==4.9
+ruff==0.9.10
+safehttpx==0.1.6
+safetensors==0.5.3
+scikit-learn==1.6.1
+scikit-learn-extra==0.3.0
+scipy==1.15.2
+seaborn==0.13.2
+semantic-version==2.10.0
+send2trash==1.8.3
+sentence-transformers==3.4.1
+sentencepiece==0.2.0
+setuptools==80.0.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+smmap==5.0.2
+sniffio==1.3.1
+soundfile==0.13.1
+soupsieve==2.6
+soxr==0.5.0.post1
+sqlalchemy==2.0.38
+stack-data==0.6.3
+starlette==0.46.2
+streamlit==1.43.2
+sympy==1.13.1
+tabulate==0.9.0
+tenacity==9.0.0
+terminado==0.18.1
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tinycss2==1.3.0
+tokenizers==0.21.1
+toml==0.10.2
+tomlkit==0.13.2
+torch==2.6.0
+torch-geometric==2.6.1
+torchaudio==2.6.0
+torchvision==0.21.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.51.3
+triton==3.2.0
+typer==0.15.3
+types-python-dateutil==2.9.0.20240906
+typing-extensions==4.13.2
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+tzdata==2025.1
+uri-template==1.3.0
+urllib3==2.4.0
+uvicorn==0.34.2
+uvloop==0.21.0
+virtualenv==20.29.1
+vllm==0.8.5
+vllm-flash-attn==2.6.1
+wadler-lindig==0.1.3
+watchdog==6.0.0
+watchfiles==1.0.5
+wcwidth==0.2.13
+webcolors==24.8.0
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.2
+xformers==0.0.29.post2
+xgrammar==0.1.18
+xxhash==3.5.0
+yarl==1.20.0
+zipp==3.21.0
+zstandard==0.23.0
